# qt4-mimetypes

./: CMakeLists.txt  README.md
cmake/modules/: PrependPath.cmake  Qt4MimetypesSetupQt.cmake  qt4-mimetypesBuildTreeSettings.cmake.in  qt4-mimetypesConfig.cmake.in  qt4-mimetypesConfigVersion.cmake.in
src/mimetypes/: qmimeglobpattern.cpp
